<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.glenn.a2048.MainActivity">



    <com.example.glenn.a2048.Board
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="4"
        android:rowCount="4"
        android:id="@+id/board"
        android:layout_above="@+id/btnReset"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"></com.example.glenn.a2048.Board>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetB"
        android:id="@+id/btnReset"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score"
        android:id="@+id/textView"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/board"
        android:layout_alignStart="@+id/board" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtScore"
        android:text="@string/scoreString"
        android:layout_above="@+id/board"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

</RelativeLayout>
